--- a/src/styles/Background.css
+++ b/src/styles/Background.css
@@ -4,11 +4,12 @@
     box-sizing: border-box;
 } */
 .canvas-container{
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 3900px;
     top: 0;
     left: 0;  
+    pointer-events: none; 
 }
 @media  (max-width:480px) {
     
