--- a/src/styles/WorkExperience.css
+++ b/src/styles/WorkExperience.css
@@ -104,4 +104,9 @@
       }
     
   }
+  @media (max-width: 480px) {         /*For mobile*/
   
+    .work-experience{
+      background-color: black;
+    }
+  }
