--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -49,6 +49,9 @@
     .contact-form-container{
         width: 300px;
     }
+    .contact-container{
+      background-color: black;
+    }
    
   }
 @media (min-width:720px) {
