--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -1,7 +1,7 @@
 .contact-form-container {
     width: 500px;
-    margin: 40px auto;
-    padding: 20px;
+    margin: auto;
+    padding: 20px ;
     background-color: #1e1e1e;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
@@ -51,6 +51,7 @@
     }
     .contact-container{
       background-color: black;
+      padding-bottom: 40px;
     }
    
   }
