--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -7,7 +7,7 @@
 }
 .head-about{
     font-size: 2.5em;
-    margin-top: 40px;
+    padding-top: 40px;
     text-align: center;
     color: #fff;
   }
