--- a/src/styles/WorkExperience.css
+++ b/src/styles/WorkExperience.css
@@ -1,7 +1,7 @@
 
   .main-heading {
     font-size: 2.5em;
-    margin: 30px 0px;
+    padding: 30px 0px;
     text-align: center;
     color: #fff;
   }
